# visa

./: .gitignore  Makefile.am  acinclude.m4  configure.ac  visa.tags
build-aux/: git-package-version
doc/: readme.texi  titlepage.texi
visa.xcodeproj/: project.pbxproj
